force-app/main/default/objects/Defect__e/Defect__e.object-meta.xml
<CustomObject>
    <label>Defect</label>
    <pluralLabel>Defects</pluralLabel>
</CustomObject>