force-app/main/default/objects/Defect__e/fields/Value_Rank__c.field-meta.xml
<CustomField>
    <fullName>Value_Rank__c</fullName>
    <label>Value Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>